# stm32f103rbt6_a33

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONFIGURATION_SUMMARY.md  STAGE1_ARCHITECTURE.md  STAGE2A_DRIVERS.md  STAGE2B_BOARD_BRINGUP.md  STAGE3_METROLOGY_CORE.md  STAGE4A_LOCAL_UI_CALIBRATION.md  STAGE4B_FLASH_PERSISTENCE.md  STAGE4B_REVIEW_FIXES.md  STAGE5A_MASS_UNITS_PROFILES_REGISTER_MODEL.md  STAGE5B_MODBUS_RTU_DMA_TRANSPORT.md  stm32f103rbt6_a33.ioc
App/: app_main.c  app_main.h  app_state.h  calibration_controller.c  calibration_controller.h  communication_manager.c  communication_manager.h  config_application.c  config_application.h  device_manager.c  device_manager.h  measurement_bridge.c  measurement_bridge.h  metrology_manager.c  metrology_manager.h  persistence_manager.c  persistence_manager.h  self_test_controller.c  self_test_controller.h  system_context.c  system_context.h  weighing_profile_manager.c  weighing_profile_manager.h
BSP/: bsp_adc.c  bsp_adc.h  bsp_board.c  bsp_board.h  bsp_flash.c  bsp_flash.h  bsp_gpio.c  bsp_gpio.h  bsp_power_monitor.c  bsp_power_monitor.h  bsp_rtu_timer.c  bsp_rtu_timer.h  bsp_time.c  bsp_time.h  bsp_uart.c  bsp_uart.h  bsp_uart_dma.c  bsp_uart_dma.h
Config/: default_config.c  default_config.h  device_config.h  project_config.h  runtime_state.h
Core/Inc/: main.h
Core/Src/: adc.c  gpio.c  main.c  stm32f1xx_it.c  tim.c  usart.c
Diagnostics/: stage2a_driver_diagnostics.c  stage2a_driver_diagnostics.h  stage2b_board_diagnostics.c  stage2b_board_diagnostics.h  stage2b_display_font.c  stage2b_display_font.h  stage3_metrology_diagnostics.c  stage3_metrology_diagnostics.h  stage4b_storage_diagnostics.c  stage4b_storage_diagnostics.h  stage5b_modbus_diagnostics.c  stage5b_modbus_diagnostics.h
Docs/: METROLOGY_REQUIREMENTS_V1.md  MODBUS_REGISTER_MAP_V1.md
Domain/: README.md
Domain/calibration/: README.md  calibration_model.c  calibration_model.h  raw_calibration_stability.c  raw_calibration_stability.h
Domain/filter/: README.md  weight_filter.c  weight_filter.h
Domain/limit_checker/: README.md
Domain/measurement/: README.md  mass_math.c  mass_math.h  mass_types.h  metrology_config_validator.c  metrology_config_validator.h  metrology_standard_validator.c  metrology_standard_validator.h  raw_measurement.c  raw_measurement.h  unit_converter.c  unit_converter.h  unit_types.h  weight_engine.c  weight_engine.h  weight_math.c  weight_math.h  weight_types.h
Domain/stability/: README.md  stability_detector.c  stability_detector.h
Domain/zero_tare/: README.md  zero_tare.c  zero_tare.h
Drivers/: README.md
Drivers/battery_adc/: README.md  battery_adc.c  battery_adc.h
Drivers/cs1237/: README.md  cs1237.c  cs1237.h  cs1237_types.h
Drivers/output_gpio/: README.md  output_gpio.c  output_gpio.h
Drivers/serial/: rs485_tx_controller.c  rs485_tx_controller.h  uart2_dma_transport.c  uart2_dma_transport.h
Drivers/tm1628/: README.md  tm1628.c  tm1628.h  tm1628_board_map.c  tm1628_board_map.h  tm1628_types.h
Drivers/uart_port/: README.md
Drivers/w02/: README.md  w02_pwrkey.c  w02_pwrkey.h
Protocol/: README.md
Protocol/ble_protocol/: README.md
Protocol/command_service/: README.md  command_service.c  command_service.h  command_types.h
Protocol/custom_protocol/: README.md
Protocol/modbus/: modbus_command_mailbox.c  modbus_command_mailbox.h  modbus_crc16.c  modbus_crc16.h  modbus_register_map.h  modbus_register_model.c  modbus_register_model.h  modbus_register_types.h  modbus_rtu_framer.c  modbus_rtu_framer.h  modbus_rtu_server.c  modbus_rtu_server.h  modbus_rtu_timing.c  modbus_rtu_timing.h
Protocol/modbus_rtu/: README.md
Services/config_edit/: config_edit.c  config_edit.h
Services/config_store/: config_store.c  config_store.h  flash_backend.h  persistent_codec.c  persistent_codec.h  persistent_schema.h
Services/crc32/: crc32.c  crc32.h
Services/event_queue/: event_queue.c  event_queue.h
Services/fault_manager/: fault_manager.c  fault_manager.h
Services/scheduler/: scheduler.c  scheduler.h
Services/storage_power_guard/: storage_power_guard.c  storage_power_guard.h
Services/watchdog/: README.md
Tests/host/: CMakeLists.txt  README.md  fake_flash_backend.c  fake_flash_backend.h  mock_hal.h  mocks.c  persistence_test_adapters.c  persistence_test_adapters.h  stage5a_model_adapters.c  stage5a_model_adapters.h  stage5b_transport_adapters.c  stage5b_transport_adapters.h  synthetic_scale_source.c  synthetic_scale_source.h  test_persistence_manager.c  test_stage2a.c  test_stage3.c  test_stage4a.c  test_stage4b.c  test_stage5a.c  test_stage5b.c
UI/: README.md  display_controller.c  display_controller.h
UI/display_model/: README.md  display_codes.c  display_codes.h  display_formatter.c  display_formatter.h  display_model.c  display_model.h  display_types.h
UI/key_service/: README.md  key_map.c  key_map.h  key_service.c  key_service.h  key_types.h
UI/menu_controller/: README.md  menu_controller.c  menu_controller.h  menu_types.h
cmake/: STM32F103RB_FLASH_CONFIG.ld  gcc-arm-none-eabi.cmake
